# TickTui

./: Cargo.toml
src/: app.rs  main.rs  tasks.rs  term.rs  ui.rs  vim_composite.rs
src/editor/: actions.rs  composite.rs  editor.rs  helpers.rs  mod.rs
src/ui/: animate.rs  composite.rs  focuslist.rs  focusmode.rs  mod.rs  normalmode.rs  taskeditor.rs  tasklist.rs
src/ui/editor/: composite.rs  editor.rs  handlers.rs  helpers.rs  mod.rs
src/ui/focuslist/: focused.rs  mod.rs  state.rs
src/ui/multiselect/: mod.rs  state.rs
