[package]
name = "ticktui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8.6"
crossterm = { version = "0.28", features = ["serde", "event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
open = "5.3.2"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ticks = { git = "https://github.com/brendon-felix/ticks.git" }
tui-textarea = { path = "/Users/felixb/Projects/tui-textarea" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
chrono = "0.4.42"
